# frequenz-repo-config-python

./: CONTRIBUTING.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml  versions.json
.github/: cookiecutter-migrate.template.py  cookiecutter-migrate.template.sh  dependabot.yml  labeler.yml
.github/containers/test-installation/: Dockerfile
.github/workflows/: ci.yaml  release-notes-check.yml
cookiecutter/: migrate.py  migrate.sh
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.github_repo_name}}/: .gitmodules  mkdocs.yml  pyproject.toml
cookiecutter/{{cookiecutter.github_repo_name}}/.github/: dependabot.yml  labeler.yml
cookiecutter/{{cookiecutter.github_repo_name}}/.github/containers/test-installation/: Dockerfile
cookiecutter/{{cookiecutter.github_repo_name}}/.github/workflows/: ci.yaml  release-notes-check.yml
cookiecutter/{{cookiecutter.github_repo_name}}/docs/_scripts/: macros.py
docs/_scripts/: macros.py
docs/user-guide/: update-an-existing-project.md
docs/user-guide/start-a-new-project/: configure-github.md
github-rulesets/: Queue PRs for v0.x.x.json
latest-dev/: 404.html  index.html
latest-dev/SUMMARY/: index.html
latest-dev/_overrides/: main.html
latest-dev/reference/frequenz/repo/config/: index.html
latest-dev/reference/frequenz/repo/config/cli/: index.html
latest-dev/reference/frequenz/repo/config/github/: index.html
latest-dev/reference/frequenz/repo/config/mkdocs/: index.html
latest-dev/reference/frequenz/repo/config/nox/: index.html
latest-dev/reference/frequenz/repo/config/protobuf/: index.html
latest-dev/reference/frequenz/repo/config/version/: index.html
latest-dev/reference/frequenz/repo/conftest/: index.html
latest-dev/user-guide/SUMMARY/: index.html
latest-dev/user-guide/migrate-an-existing-project/: index.html
latest-dev/user-guide/start-a-new-project/configure-github/: index.html
latest-dev/user-guide/start-a-new-project/configure-pypi/: index.html
latest-dev/user-guide/update-an-existing-project/: index.html
next/: index.html  objects.inv
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/reference/SUMMARY/: index.html
next/reference/frequenz/repo/config/: index.html
next/reference/frequenz/repo/config/nox/: index.html
next/reference/frequenz/repo/config/protobuf/: index.html
next/reference/frequenz/repo/config/pytest/: index.html
next/reference/frequenz/repo/config/setuptools/: index.html
next/search/: search_index.json
src/frequenz/repo/config/pytest/: examples.py
tests_golden/integration/test_cookiecutter_generation/actor/: cookiecutter-stdout.txt
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/: .cookiecutter-replay.json  mkdocs.yml  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/actor/frequenz-actor-test/.github/: labeler.yml
tests_golden/integration/test_cookiecutter_generation/api/: cookiecutter-stdout.txt
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/: .cookiecutter-replay.json  .gitmodules  mkdocs.yml  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/api/frequenz-api-test/.github/: dependabot.yml  labeler.yml
tests_golden/integration/test_cookiecutter_generation/app/: cookiecutter-stdout.txt
tests_golden/integration/test_cookiecutter_generation/app/frequenz-app-test/: .cookiecutter-replay.json  mkdocs.yml  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/app/frequenz-app-test/.github/: labeler.yml
tests_golden/integration/test_cookiecutter_generation/lib/: cookiecutter-stdout.txt
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/: .cookiecutter-replay.json  mkdocs.yml  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/lib/frequenz-test-python/.github/: dependabot.yml  labeler.yml
tests_golden/integration/test_cookiecutter_generation/model/: cookiecutter-stdout.txt
tests_golden/integration/test_cookiecutter_generation/model/frequenz-model-test/: .cookiecutter-replay.json  mkdocs.yml  pyproject.toml
tests_golden/integration/test_cookiecutter_generation/model/frequenz-model-test/.github/: labeler.yml
v0-dev/: 404.html  index.html
v0-dev/CONTRIBUTING/: index.html
v0-dev/SUMMARY/: index.html
v0-dev/_overrides/: main.html
v0-dev/reference/SUMMARY/: index.html
v0-dev/reference/frequenz/repo/config/cli/: index.html
v0-dev/reference/frequenz/repo/config/mkdocs/: index.html
v0-dev/reference/frequenz/repo/config/protobuf/: index.html
v0-dev/reference/frequenz/repo/config/pytest/: index.html
v0-dev/reference/frequenz/repo/config/setuptools/: index.html
v0-dev/user-guide/: index.html
v0-dev/user-guide/advanced-usage/: index.html
v0-dev/user-guide/start-a-new-project/: index.html
v0.0-dev/reference/frequenz/repo/config/version/: index.html
v0.7/: index.html
v0.7-dev/: 404.html  index.html
v0.7-dev/CONTRIBUTING/: index.html
v0.7-dev/SUMMARY/: index.html
v0.7-dev/_scripts/: macros.py
v0.7-dev/reference/SUMMARY/: index.html
v0.7-dev/reference/frequenz/repo/config/: index.html
v0.7-dev/reference/frequenz/repo/config/cli/: index.html
v0.7-dev/reference/frequenz/repo/config/mkdocs/: index.html
v0.7-dev/reference/frequenz/repo/config/nox/: index.html
v0.7-dev/reference/frequenz/repo/config/protobuf/: index.html
v0.7-dev/reference/frequenz/repo/config/pytest/: index.html
v0.7-dev/reference/frequenz/repo/config/setuptools/: index.html
v0.7-dev/reference/frequenz/repo/config/version/: index.html
v0.7-dev/reference/frequenz/repo/conftest/: index.html
v0.7-dev/search/: search_index.json
v0.7-pre/: index.html
v0.7-pre/reference/frequenz/repo/config/: index.html
v0.7-pre/reference/frequenz/repo/config/cli/: index.html
v0.7-pre/search/: search_index.json
v0.7/reference/frequenz/repo/config/: index.html
v0.7/search/: search_index.json
v0.8-dev/CONTRIBUTING/: index.html
v0.8-dev/_scripts/: macros.py
v0.8-dev/reference/frequenz/repo/config/: index.html
v0.8-dev/search/: search_index.json
(+69 files in other folders)
